[WIP] Line-integral experiment

--- a/notebooks/representation_editing_low_rank.ipynb
+++ b/notebooks/representation_editing_low_rank.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,21 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-07-28 17:12:39 src.models INFO     loading EleutherAI/gpt-j-6B (device=cuda, fp16=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023-07-28 17:12:47 src.models INFO     dtype: torch.float16, device: cuda:0, memory: 12219206136\n"
+      "2023-08-09 17:30:56 src.models INFO     loading EleutherAI/gpt-j-6B (device=cuda, fp16=True)\n",
+      "2023-08-09 17:31:07 src.models INFO     dtype: torch.float16, device: cuda:0, memory: 12219206136\n"
      ]
     }
    ],
@@ -75,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,22 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-07-28 17:31:27 src.utils.experiment_utils INFO     setting all seeds to 123456\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023-07-28 17:32:11 src.operators WARNING  relation has > 1 prompt_templates, will use first ({} works as a)\n",
-      "2023-07-28 17:32:46 src.operators WARNING  relation has > 1 prompt_templates, will use first (For university, {} attended)\n"
+      "2023-08-09 17:31:33 src.utils.experiment_utils INFO     setting all seeds to 123456\n"
      ]
     }
    ],
