[WIP] working on demos

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e330d954",
+   "id": "df34c039",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9958eee6",
+   "id": "692d3751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,18 +29,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b082b34c",
+   "execution_count": null,
+   "id": "42c63b83",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dtype: torch.float16, device: cuda:0, memory: 12219206136\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = \"cuda:0\"\n",
     "mt = models.load_model(\"gptj\", device=device, fp16=True)\n",
@@ -50,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6b94b9db",
+   "id": "37ee0701",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +186,7 @@
    "source": [
     "dataset = data.load_dataset()\n",
     "\n",
-    "relation_names = [r.name for r in dataset]\n",
+    "relation_names = [r.name for r in dataset.relations]\n",
     "relation_options = Menu(choices = relation_names, value = relation_names)\n",
     "show(relation_options)"
    ]
@@ -202,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b68e8b11",
+   "id": "4b70864c",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "64b66872",
+   "id": "fdb69b6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d895d11f",
+   "id": "a3929dd8",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eda7ce1",
+   "id": "0ab02f08",
    "metadata": {},
    "source": [
     "# Checking $faithfulness$"
@@ -283,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c665df0a",
+   "id": "354f4207",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b1ca334e",
+   "id": "ff4e9b1c",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "565e6c3e",
+   "id": "334a3954",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc3d42d8",
+   "id": "bf9ae83f",
    "metadata": {},
    "source": [
     "## Approximating LM computation $F$ as an affine transformation\n",
@@ -355,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2a250b66",
+   "id": "12cff47b",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bdac1c7c",
+   "id": "eb5b56cd",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "210705f3",
+   "id": "f18cbd5f",
    "metadata": {},
    "source": [
     "# $causality$"
@@ -456,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a9ff3266",
+   "id": "5d8a89ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bbf8796a",
+   "id": "f38aedad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e750066f",
+   "id": "3827a821",
    "metadata": {},
    "source": [
     "## setup"
@@ -487,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0dbd6a45",
+   "id": "00e2744f",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaf01d71",
+   "id": "cdf1674e",
    "metadata": {},
    "source": [
     "### Calculate $\\Delta \\mathbf{s}$ such that $\\mathbf{s} + \\Delta \\mathbf{s} \\approx \\mathbf{s}'$\n",
@@ -526,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3bc98f98",
+   "id": "0bf499ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "536319dd",
+   "id": "a3c38bb3",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfb2cfed",
+   "id": "402abe7d",
    "metadata": {},
    "source": [
     "## Measuring causality"
@@ -646,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "06aa9c60",
+   "id": "75814669",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "17f0a510",
+   "id": "d1bb9735",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0e176c2",
+   "id": "aae56894",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -744,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "874a0047",
+   "id": "604314f3",
    "metadata": {},
    "outputs": [],
    "source": []
