updated the causality figure in demo

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -504,12 +504,13 @@
    "source": [
     "### Calculate $\\Delta \\mathbf{s}$ such that $\\mathbf{s} + \\Delta \\mathbf{s} \\approx \\mathbf{s}'$\n",
     "\n",
-    "<!-- ![](causality-crop.png) -->\n",
-    "<img src=\"causality-crop.png\" style=\"width:50%;\"/>\n",
+    "<p align=\"center\">\n",
+    "    <img align=\"center\" src=\"causality-crop.png\" style=\"width:80%;\"/>\n",
+    "</p>\n",
     "\n",
-    "Under the relation $r =\\, $*plays the instrument*, and given the subject $s =\\, $*Miles Davis*, the model will predict $o =\\, $*trumpet* **(a)** Under the same relation given the subject $s' =\\, $*Cat Stevens*, the model will now predict $o' =\\, $*guiter* **(b)**. \n",
+    "Under the relation $r =\\, $*plays the instrument*, and given the subject $s =\\, $*Miles Davis*, the model will predict $o =\\, $*trumpet* **(a)**; and given the subject $s' =\\, $*Cat Stevens*, the model will now predict $o' =\\, $*guiter* **(b)**. \n",
     "\n",
-    "If the computation from $\\mathbf{s}$ to $\\mathbf{o}$ is well-approximated by $operator$, then adding the vector $\\Delta{\\mathbf{s}}$ to $\\mathbf{s}$ **(c)** would be equivalent to replacing $\\mathbf{s}$ with $\\mathbf{s}'$ and it should change the model prediction to $o'$ = *guitar* **(d)**."
+    "If the computation from $\\mathbf{s}$ to $\\mathbf{o}$ is well-approximated by $operator$ parameterized by $W_r$ and $b_r$ **(c)**, then $\\Delta{\\mathbf{s}}$ **(d)** should tell us the direction of change from $\\mathbf{s}$ to $\\mathbf{s}'$. Thus, $\\tilde{\\mathbf{s}}=\\mathbf{s}+\\Delta\\mathbf{s}$ would be an approximation of $\\mathbf{s}'$ and patching $\\tilde{\\mathbf{s}}$ in place of $\\mathbf{s}$ should change the prediction to $o'$ = *guitar* "
    ]
   },
   {
