updated sweep plotting code >> transpose main figures

--- a/notebooks/figures/sweep_results.ipynb
+++ b/notebooks/figures/sweep_results.ipynb
@@ -855,7 +855,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "filtered_results[\"country capital city\"].best_by_efficacy(beta=2.25).recall"
+   ]
   },
   {
    "cell_type": "code",
@@ -870,12 +872,12 @@
     "\n",
     "SMALL_SIZE = 28\n",
     "MEDIUM_SIZE = 35\n",
-    "BIGGER_SIZE = 40\n",
+    "BIGGER_SIZE = 45\n",
     "\n",
     "plt.rc(\"font\", size=SMALL_SIZE)  # controls default text sizes\n",
     "plt.rc(\"axes\", labelsize=BIGGER_SIZE)  # fontsize of the x and y labels\n",
-    "plt.rc(\"xtick\", labelsize=SMALL_SIZE)  # fontsize of the tick labels\n",
-    "plt.rc(\"ytick\", labelsize=MEDIUM_SIZE)  # fontsize of the tick labels\n",
+    "plt.rc(\"xtick\", labelsize=MEDIUM_SIZE)  # fontsize of the tick labels\n",
+    "plt.rc(\"ytick\", labelsize=SMALL_SIZE-4)  # fontsize of the tick labels\n",
     "plt.rc(\"legend\", fontsize=SMALL_SIZE)  # legend fontsize\n",
     "plt.rc(\"figure\", titlesize=BIGGER_SIZE)  # fontsize of the figure title\n",
     "\n",
@@ -890,7 +892,7 @@
     "    })\n",
     "\n",
     "if model_name == \"gptj\":\n",
-    "    relation_recall = sorted(relation_recall, key = lambda x: x[\"recall@1\"])\n",
+    "    relation_recall = sorted(relation_recall, key = lambda x: x[\"recall@1\"])[::-1]\n",
     "    with open(f\"relation_order_{model_name}.json\", \"w\") as f:\n",
     "        json.dump(relation_recall, f)\n",
     "    plot_info = relation_recall\n",
@@ -916,13 +918,21 @@
     "relations = [r[\"relation\"] for r in plot_info]\n",
     "recalls = [r[\"recall@1\"] for r in plot_info]\n",
     "\n",
+    "# plt.figure(figsize = (10, 20))\n",
+    "# plt.barh(np.arange(len(relations)), recalls, color = \"steelblue\", alpha = 0.7)\n",
+    "# plt.yticks(np.arange(len(relations)), relations)\n",
+    "# plt.xticks(np.linspace(0, 1, 11), [np.round(v, 1) for v in np.linspace(0, 1, 11)])\n",
+    "# plt.ylim(-0.7,len(plot_info)-.3)\n",
+    "# plt.xlabel(\"Faithfulness\")\n",
+    "# plt.xlim(0, 1)\n",
+    "\n",
     "plt.figure(figsize = (10, 20))\n",
-    "plt.barh(np.arange(len(relations)), recalls, color = \"steelblue\", alpha = 0.7)\n",
-    "plt.yticks(np.arange(len(relations)), relations)\n",
-    "plt.xticks(np.linspace(0, 1, 11), [np.round(v, 1) for v in np.linspace(0, 1, 11)])\n",
-    "plt.ylim(-0.7,len(plot_info)-.3)\n",
-    "plt.xlabel(\"Faithfulness\")\n",
-    "plt.xlim(0, 1)\n",
+    "plt.bar(np.arange(len(relations)), recalls, color = \"steelblue\", alpha = 0.6)\n",
+    "plt.xticks(np.arange(len(relations)), relations, rotation=90)\n",
+    "plt.yticks(np.linspace(0, 1, 11), [np.round(v, 1) for v in np.linspace(0, 1, 11)])\n",
+    "plt.xlim(-0.7,len(plot_info)-.3)\n",
+    "plt.ylabel(\"Faithfulness\", fontsize=MEDIUM_SIZE)\n",
+    "plt.ylim(0, 1)\n",
     "\n",
     "with open(f\"../../results/tables/known/{model_name}.json\") as f:\n",
     "    model_known = json.load(f)\n",
@@ -940,7 +950,7 @@
     "        if obj not in ans_counter:\n",
     "            ans_counter[obj] = 0\n",
     "        ans_counter[obj] += 1\n",
-    "    print(relation_name, end=\": \")\n",
+    "    # print(relation_name, end=\": \")\n",
     "    # majority_ans, majority_ans_count = max(ans_counter.items(), key = lambda x: x[1]) if len(ans_counter) > 0 else (0, 0)\n",
     "\n",
     "    # # divide_by = len(model_known[relation_name][\"known_samples\"]) if len(ans_counter) > 0 else 1\n",
@@ -954,16 +964,19 @@
     "        random_baseline += o_count**2\n",
     "    random_baseline /= divide_by**2\n",
     "\n",
-    "    print(ans_counter)\n",
-    "    plt.scatter(random_baseline, idx, color = \"darkred\", alpha = 1, marker=\"|\", s = 700)\n",
+    "    # print(ans_counter)\n",
+    "    # plt.scatter(random_baseline, idx, color = \"darkred\", alpha = 1, marker=\"|\", s = 700)\n",
+    "    plt.scatter(idx, random_baseline, color = \"darkred\", alpha = 1, marker=\"_\", s = 800)\n",
     "\n",
     "for x_tick in np.linspace(0, 1, 11):\n",
-    "    plt.axvline(x_tick, color = \"black\", alpha = 0.05)\n",
+    "    # plt.axvline(x_tick, color = \"black\", alpha = 0.05)\n",
+    "    plt.axhline(x_tick, color = \"black\", alpha = 0.05)\n",
     "\n",
-    "plt.title(f\"LRE faithfulness in {model_name_dict[model_name]}\", x = 0.27, pad=15, fontsize=BIGGER_SIZE)\n",
+    "plt.title(f\"LRE faithfulness in {model_name_dict[model_name]}\", pad=15, fontsize=BIGGER_SIZE)\n",
     "\n",
     "fig = plt.gcf()\n",
-    "fig.set_size_inches(10, 27)\n",
+    "# fig.set_size_inches(10, 27)\n",
+    "fig.set_size_inches(27, 6)\n",
     "\n",
     "plt.savefig(f\"{fig_dir}/{model_name}-faithfulness_lre_relationwise.pdf\", bbox_inches=\"tight\")\n",
     "\n",
