--- a/notebooks/figures/varying_prompt.ipynb
+++ b/notebooks/figures/varying_prompt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['person_occupation',\n",
+       " 'landmark_in_country',\n",
+       " 'country_capital_city',\n",
+       " 'plays_pro_sport',\n",
+       " 'city_in_country',\n",
+       " 'food_from_country',\n",
+       " 'occupation_gender',\n",
+       " 'name_gender',\n",
+       " 'country_language',\n",
+       " 'object_superclass',\n",
+       " 'landmark_on_continent',\n",
+       " 'country_largest_city',\n",
+       " 'verb_past_tense',\n",
+       " 'name_birthplace',\n",
+       " 'person_sport_position',\n",
+       " 'adjective_superlative']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "##############################################\n",
     "model_name = \"gptj\"\n",
@@ -50,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,10 +135,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------\n",
+      "relation='person_occupation'\n",
+      "-------------------------\n",
+      "& \\texttt{\\{\\} works professionally as a} & $0.41 \\pm 0.08$ & $0.55 \\pm 0.09$ \\\\\n",
+      "& \\texttt{\\{\\} works as a} & $0.44 \\pm 0.11$ & $0.58 \\pm 0.07$ \\\\\n",
+      "& \\texttt{By profession, \\{\\} is a} & $0.46 \\pm 0.14$ & $0.58 \\pm 0.08$ \\\\\n",
+      "\\hline\n",
+      "-------------------------\n",
+      "relation='landmark_in_country'\n",
+      "-------------------------\n",
+      "& \\texttt{What country is \\{\\} in? It is in} & $0.27 \\pm 0.10$ & $0.64 \\pm 0.03$ \\\\\n",
+      "& \\texttt{\\{\\} is in the country of} & $0.31 \\pm 0.08$ & $0.66 \\pm 0.02$ \\\\\n",
+      "\\hline\n",
+      "-------------------------\n",
+      "relation='country_capital_city'\n",
+      "-------------------------\n",
+      "& \\texttt{The capital of \\{\\} is} & $0.84 \\pm 0.09$ & $0.94 \\pm 0.04$ \\\\\n",
+      "& \\texttt{The capital of \\{\\} is the city of} & $0.87 \\pm 0.08$ & $0.94 \\pm 0.04$ \\\\\n",
+      "& \\texttt{The capital city of \\{\\} is} & $0.84 \\pm 0.08$ & $0.94 \\pm 0.04$ \\\\\n",
+      "& \\texttt{What is the capital of \\{\\}? It is the city of} & $0.87 \\pm 0.07$ & $0.92 \\pm 0.05$ \\\\\n",
+      "\\hline\n",
+      "-------------------------\n",
+      "relation='plays_pro_sport'\n",
+      "-------------------------\n",
+      "& \\texttt{\\{\\} plays the sport of} & $0.78 \\pm 0.07$ & $0.90 \\pm 0.03$ \\\\\n",
+      "& \\texttt{\\{\\} plays professionally in the sport of} & $0.78 \\pm 0.09$ & $0.90 \\pm 0.03$ \\\\\n",
+      "& \\texttt{What sport does \\{\\} play? They play} & $0.81 \\pm 0.06$ & $0.90 \\pm 0.03$ \\\\\n",
+      "\\hline\n",
+      "-------------------------\n",
+      "relation='city_in_country'\n",
+      "-------------------------\n",
+      "& \\texttt{\\{\\} is part of} & $0.45 \\pm 0.11$ & $0.81 \\pm 0.10$ \\\\\n",
+      "& \\texttt{\\{\\} is in the country of} & $0.51 \\pm 0.10$ & $0.85 \\pm 0.09$ \\\\\n",
+      "& \\texttt{\\{\\} is part of the country of} & $0.44 \\pm 0.11$ & $0.86 \\pm 0.06$ \\\\\n",
+      "& \\texttt{\\{\\} is located in the country of} & $0.45 \\pm 0.08$ & $0.87 \\pm 0.06$ \\\\\n",
+      "\\hline\n",
+      "-------------------------\n",
+      "relation='food_from_country'\n",
+      "-------------------------\n",
+      "& \\texttt{\\{\\} originates from} & $0.41 \\pm 0.14$ & $0.89 \\pm 0.07$ \\\\\n",
+      "& \\texttt{What is the country of origin for \\{\\}? It originates from} & $0.44 \\pm 0.10$ & $0.88 \\pm 0.06$ \\\\\n",
+      "& \\texttt{\\{\\} is from the country of} & $0.48 \\pm 0.12$ & $0.90 \\pm 0.07$ \\\\\n",
+      "& \\texttt{\\{\\} originates from the country of} & $0.44 \\pm 0.14$ & $0.88 \\pm 0.06$ \\\\\n",
+      "\\hline\n",
+      "-------------------------\n",
+      "relation='occupation_gender'\n",
+      "-------------------------\n",
+      "& \\texttt{What gender (men or women) are \\{\\} associated with? They are usually} & $0.90 \\pm 0.09$ & $0.98 \\pm 0.03$ \\\\\n",
+      "& \\texttt{Usually, what gender (men or women) are \\{\\}? They are typically} & $0.92 \\pm 0.07$ & $0.99 \\pm 0.03$ \\\\\n",
+      "& \\texttt{Is the profession of \\{\\} usually for men or women? It is usually for} & $0.88 \\pm 0.09$ & $0.98 \\pm 0.04$ \\\\\n",
+      "& \\texttt{\\{\\} are typically} & $1.00 \\pm 0.00$ & $0.74 \\pm 0.15$ \\\\\n",
+      "\\hline\n",
+      "-------------------------\n",
+      "relation='name_gender'\n",
+      "-------------------------\n",
+      "& \\texttt{Is \\{\\} a name for a man or a woman? It is for a} & $0.61 \\pm 0.09$ & $0.82 \\pm 0.07$ \\\\\n",
+      "& \\texttt{Is the name \\{\\} usually for a man or woman? It's usually for a} & $0.62 \\pm 0.06$ & $0.82 \\pm 0.11$ \\\\\n",
+      "& \\texttt{\\{\\} is usually a name for a} & $0.70 \\pm 0.22$ & $0.75 \\pm 0.23$ \\\\\n",
+      "& \\texttt{What gender (man or woman) is the name \\{\\}? It's usually a} & $0.84 \\pm 0.10$ & $0.90 \\pm 0.06$ \\\\\n",
+      "\\hline\n",
+      "-------------------------\n",
+      "relation='country_language'\n",
+      "-------------------------\n",
+      "& \\texttt{In \\{\\}, the primary language is} & $0.75 \\pm 0.13$ & $0.97 \\pm 0.04$ \\\\\n",
+      "& \\texttt{In \\{\\}, people speak the language of} & $0.83 \\pm 0.10$ & $0.97 \\pm 0.05$ \\\\\n",
+      "& \\texttt{The language used in \\{\\} is} & $0.70 \\pm 0.14$ & $0.98 \\pm 0.02$ \\\\\n",
+      "& \\texttt{People in \\{\\} speak} & $0.83 \\pm 0.09$ & $0.96 \\pm 0.04$ \\\\\n",
+      "& \\texttt{People in \\{\\} speak the language of} & $0.83 \\pm 0.09$ & $0.99 \\pm 0.02$ \\\\\n",
+      "& \\texttt{\\{\\}, where most people speak} & $0.62 \\pm 0.14$ & $0.95 \\pm 0.05$ \\\\\n",
+      "\\hline\n",
+      "-------------------------\n",
+      "relation='object_superclass'\n",
+      "-------------------------\n",
+      "& \\texttt{A \\{\\} is in the category of a} & $0.85 \\pm 0.05$ & $0.88 \\pm 0.06$ \\\\\n",
+      "& \\texttt{What superclass (animal, bird, fish, vegetable, flower, fruit) is a \\{\\}? It is a} & $0.92 \\pm 0.03$ & $0.92 \\pm 0.04$ \\\\\n",
+      "& \\texttt{Is a \\{\\} a animal, bird, fish, vegetable, flower, or fruit? It is a} & $0.87 \\pm 0.04$ & $0.89 \\pm 0.05$ \\\\\n",
+      "\\hline\n",
+      "-------------------------\n",
+      "relation='landmark_on_continent'\n",
+      "-------------------------\n",
+      "& \\texttt{What continent is \\{\\} on? It is on} & $0.53 \\pm 0.16$ & $0.78 \\pm 0.07$ \\\\\n",
+      "& \\texttt{\\{\\} is on the continent of} & $0.48 \\pm 0.19$ & $0.77 \\pm 0.07$ \\\\\n",
+      "\\hline\n",
+      "-------------------------\n",
+      "relation='country_largest_city'\n",
+      "-------------------------\n",
+      "& \\texttt{The largest city in \\{\\} is the city of} & $0.91 \\pm 0.05$ & $0.95 \\pm 0.06$ \\\\\n",
+      "& \\texttt{What is the largest city in \\{\\}? It is the city of} & $0.88 \\pm 0.05$ & $0.94 \\pm 0.07$ \\\\\n",
+      "& \\texttt{The biggest city in \\{\\} is} & $0.88 \\pm 0.07$ & $0.95 \\pm 0.06$ \\\\\n",
+      "& \\texttt{The largest city in \\{\\} is} & $0.88 \\pm 0.06$ & $0.95 \\pm 0.05$ \\\\\n",
+      "\\hline\n",
+      "-------------------------\n",
+      "relation='verb_past_tense'\n",
+      "-------------------------\n",
+      "& \\texttt{What is the past tense of \\{\\}? It is} & $0.92 \\pm 0.07$ & $0.96 \\pm 0.03$ \\\\\n",
+      "& \\texttt{The past tense of \\{\\} is} & $0.94 \\pm 0.04$ & $0.95 \\pm 0.04$ \\\\\n",
+      "\\hline\n",
+      "-------------------------\n",
+      "relation='name_birthplace'\n",
+      "-------------------------\n",
+      "& \\texttt{\\{\\} was born in the country of} & $0.85 \\pm 0.07$ & $0.85 \\pm 0.09$ \\\\\n",
+      "& \\texttt{What country was \\{\\} most likely born in? They were born in} & $0.83 \\pm 0.08$ & $0.87 \\pm 0.07$ \\\\\n",
+      "\\hline\n",
+      "-------------------------\n",
+      "relation='person_sport_position'\n",
+      "-------------------------\n",
+      "& \\texttt{In their sport, \\{\\} plays in the position of a} & $0.38 \\pm 0.23$ & $0.59 \\pm 0.13$ \\\\\n",
+      "& \\texttt{\\{\\} plays in the position of a} & $0.43 \\pm 0.19$ & $0.58 \\pm 0.11$ \\\\\n",
+      "& \\texttt{Which position does \\{\\} play? They play as a} & $0.46 \\pm 0.15$ & $0.63 \\pm 0.10$ \\\\\n",
+      "& \\texttt{In their sport, \\{\\} plays as a} & $0.39 \\pm 0.13$ & $0.65 \\pm 0.08$ \\\\\n",
+      "\\hline\n",
+      "-------------------------\n",
+      "relation='adjective_superlative'\n",
+      "-------------------------\n",
+      "& \\texttt{The superlative form of \\{\\} is} & $0.93 \\pm 0.02$ & $0.97 \\pm 0.02$ \\\\\n",
+      "& \\texttt{What is the superlative form of \\{\\}? It is} & $0.92 \\pm 0.02$ & $0.96 \\pm 0.03$ \\\\\n",
+      "\\hline\n"
+     ]
+    }
+   ],
    "source": [
+    "diff_faith = []\n",
+    "diff_eff = []\n",
+    "\n",
     "for relation in os.listdir(path):\n",
     "    print(\"-------------------------\")\n",
     "    print(f\"{relation=}\")\n",
@@ -120,13 +273,40 @@
     "    prompt_templates, faith_means, faith_stds, eff_means, eff_stds = parse_for_relation(\n",
     "        relation=relation\n",
     "    )\n",
+    "\n",
     "    for i in range(len(prompt_templates)):\n",
     "        line = \"& \\\\texttt{\" + prompt_templates[i].replace('{}', '\\{\\}') + \"} \"\n",
     "        line += f\"& ${faith_means[i]:.2f} \\pm {faith_stds[i]:.2f}$ \"\n",
     "        line += f\"& ${eff_means[i]:.2f} \\pm {eff_stds[i]:.2f}$ \"\n",
     "        line += \"\\\\\\\\\"\n",
     "        print(line)\n",
-    "    print(\"\\\\hline\")\n"
+    "\n",
+    "    for i in faith_means:\n",
+    "        diff_faith.append(i - faith_means[0])\n",
+    "    for i in eff_means:\n",
+    "        diff_eff.append(i - eff_means[0])\n",
+    "    \n",
+    "    print(\"\\\\hline\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0183642867583407, 0.002540693583432121)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(diff_faith).mean(), np.array(diff_eff).mean()"
    ]
   },
   {
